Moving to Maven Assembly plugin to create executable jar